# Energy_Forecasting

./: .gitignore  README.md
Energy_Forecasting/: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
Energy_Forecasting/docs/: mkdocs.yml
Energy_Forecasting/docs/docs/: index.md
Energy_Forecasting/energy_forecast/data/: data_loaders.py  dataset.py
Energy_Forecasting/energy_forecast/modeling/: losses.py  rnn.py
Energy_Forecasting/energy_forecast/training/: early_stopping.py  evaluate.py  train.py
Energy_Forecasting/energy_forecast/visualization/: model_plots.py
Energy_Forecasting/notebooks/: 02_EDA.ipynb  03_EDA.ipynb
config/: .env
notebooks/: 01_EDA.ipynb  02_EDA.ipynb
src/utils/: eic_mapping.py  entsoe_client.py  entsoe_parser.py  series_parsers.py
src/utils/app/: services.py
